# rdns

./: Cargo.toml  Readme.md  flake.nix
dnsparse/: Cargo.toml
dnsparse/src/: lib.rs  parser.rs  types.rs  utils.rs  writer.rs
src/: lib.rs  main.rs  parser.rs  utils.rs  writer.rs
