[package]
name = "dnsparse"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0"
anyhow = "1.0"
typed-builder = "0.9"
log = "0.4"

[dev-dependencies]
pretty_assertions = "0.7"
env_logger = "0.9"
